salesforce/metadata/objects/MSD_Checkpoint__c.object
<CustomObject>
    <label>MSD Checkpoint</label>
    <nameField>
        <displayFormat>CHK-{0000}</displayFormat>
        <label>Checkpoint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSD Checkpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MSD_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>MSD_Schedule__c</referenceTo>
        <relationshipLabel>Checkpoints</relationshipLabel>
        <relationshipName>Checkpoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSD_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Run</label>
        <referenceTo>MSD_Run__c</referenceTo>
        <relationshipLabel>Checkpoints</relationshipLabel>
        <relationshipName>Checkpoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSD_ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_LastCheckpoint__c</fullName>
        <label>Last Checkpoint Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_LastRecordId__c</fullName>
        <label>Last Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MSD_ObjectName__c</columns>
        <columns>MSD_LastCheckpoint__c</columns>
        <columns>MSD_LastRecordId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Checkpoints</label>
    </listViews>
</CustomObject>